third_party/move/move-compiler-v2/tests/checking-lang-v2.4/specs/behavior_predicates_err.exp

Diagnostics:
error: global resource access expected
   ┌─ tests/checking-lang-v2.4/specs/behavior_predicates_err.move:24:33
   │
24 │         modifies modifies_of<f>(x);
   │                                 ^

error: global resource access expected
   ┌─ tests/checking-lang-v2.4/specs/behavior_predicates_err.move:24:18
   │
24 │         modifies modifies_of<f>(x);
   │                  ^^^^^^^^^^^^^^^^^
